<?xml version="1.0"?>
<package>
  <name>h4r_gazebo_it</name>
  <version>0.0.0</version>
  <description>The h4r_gazebo_it package 
  	provides tools for converting simple models to gazebo to use them as obstacles in the simulation
  	currently only supports sweet home 3d model libraries
  	</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>blender</run_depend>


  <export>

  </export>
</package>